antlr_gen/KotlinParser.py
# Generated from grammar/KotlinParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class KotlinParser ( Parser ):

    grammarFileName = "KotlinParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'fun'", "'if'", "'else'", "'for'", "'while'", 
                     "'do'", "'in'", "'return'", "'val'", "'var'", "'true'", 
                     "'false'", "'as'", "'break'", "'class'", "'continue'", 
                     "'is'", "'object'", "'package'", "'this'", "'throw'", 
                     "'typealias'", "'typeof'", "'arrayOf'", "'when'", "'interface'", 
                     "'try'", "'catch'", "'finally'", "'null'", "'->'", 
                     "'Int'", "'String'", "'Boolean'", "'Float'", "'Double'", 
                     "'Char'", "'Array'", "'IntArray'", "'CharArray'", "'BooleanArray'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "':'", 
                     "','", "'..'", "'.'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'='", 
                     "'&&'", "'||'", "'!'" ]

    symbolicNames = [ "<INVALID>", "FUN", "IF", "ELSE", "FOR", "WHILE", 
                      "DO", "IN", "RETURN", "VAL", "VAR", "TRUE", "FALSE", 
                      "AS", "BREAK", "CLASS", "CONTINUE", "IS", "OBJECT", 
                      "PACKAGE", "THIS", "THROW", "TYPEALIAS", "TYPEOF", 
                      "ARRAYOF", "WHEN", "INTERFACE", "TRY", "CATCH", "FINALLY", 
                      "NULL", "ARROW", "INT_TYPE", "STRING_TYPE", "BOOLEAN_TYPE", 
                      "FLOAT_TYPE", "DOUBLE_TYPE", "CHAR_TYPE", "ARRAY_TYPE", 
                      "INTARRAY_TYPE", "CHARARRAY_TYPE", "BOOLEANARRAY_TYPE", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "SEMI", "COLON", "COMMA", "RANGE", "DOT", 
                      "PLUS", "MINUS", "MUL", "DIV", "MOD", "INC", "DEC", 
                      "PLUSEQ", "MINUSEQ", "MULEQ", "DIVEQ", "MODEQ", "EQ", 
                      "NEQ", "LT", "GT", "LEQ", "GEQ", "ASSIGN", "AND", 
                      "OR", "NOT", "ID", "INT_LITERAL", "FLOAT_LITERAL", 
                      "STRING", "CHAR", "LINE_COMMENT", "BLOCK_COMMENT", 
                      "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_functionDecl = 2
    RULE_parameterList = 3
    RULE_parameter = 4
    RULE_type = 5
    RULE_ifStatement = 6
    RULE_whenStatement = 7
    RULE_whenEntry = 8
    RULE_whileStatement = 9
    RULE_doWhileStatement = 10
    RULE_forStatement = 11
    RULE_tryStatement = 12
    RULE_catchClause = 13
    RULE_finallyClause = 14
    RULE_returnStatement = 15
    RULE_valDecl = 16
    RULE_varDecl = 17
    RULE_exprStatement = 18
    RULE_block = 19
    RULE_breakStatement = 20
    RULE_continueStatement = 21
    RULE_throwStatement = 22
    RULE_expression = 23
    RULE_arrayCreation = 24
    RULE_literal = 25
    RULE_binaryOp = 26
    RULE_unaryOp = 27
    RULE_unaryPostfixOp = 28
    RULE_rangeExpression = 29

    ruleNames =  [ "program", "statement", "functionDecl", "parameterList", 
                   "parameter", "type", "ifStatement", "whenStatement", 
                   "whenEntry", "whileStatement", "doWhileStatement", "forStatement", 
                   "tryStatement", "catchClause", "finallyClause", "returnStatement", 
                   "valDecl", "varDecl", "exprStatement", "block", "breakStatement", 
                   "continueStatement", "throwStatement", "expression", 
                   "arrayCreation", "literal", "binaryOp", "unaryOp", "unaryPostfixOp", 
                   "rangeExpression" ]

    EOF = Token.EOF
    FUN=1
    IF=2
    ELSE=3
    FOR=4
    WHILE=5
    DO=6
    IN=7
    RETURN=8
    VAL=9
    VAR=10
    TRUE=11
    FALSE=12
    AS=13
    BREAK=14
    CLASS=15
    CONTINUE=16
    IS=17
    OBJECT=18
    PACKAGE=19
    THIS=20
    THROW=21
    TYPEALIAS=22
    TYPEOF=23
    ARRAYOF=24
    WHEN=25
    INTERFACE=26
    TRY=27
    CATCH=28
    FINALLY=29
    NULL=30
    ARROW=31
    INT_TYPE=32
    STRING_TYPE=33
    BOOLEAN_TYPE=34
    FLOAT_TYPE=35
    DOUBLE_TYPE=36
    CHAR_TYPE=37
    ARRAY_TYPE=38
    INTARRAY_TYPE=39
    CHARARRAY_TYPE=40
    BOOLEANARRAY_TYPE=41
    LPAREN=42
    RPAREN=43
    LBRACE=44
    RBRACE=45
    LBRACK=46
    RBRACK=47
    SEMI=48
    COLON=49
    COMMA=50
    RANGE=51
    DOT=52
    PLUS=53
    MINUS=54
    MUL=55
    DIV=56
    MOD=57
    INC=58
    DEC=59
    PLUSEQ=60
    MINUSEQ=61
    MULEQ=62
    DIVEQ=63
    MODEQ=64
    EQ=65
    NEQ=66
    LT=67
    GT=68
    LEQ=69
    GEQ=70
    ASSIGN=71
    AND=72
    OR=73
    NOT=74
    ID=75
    INT_LITERAL=76
    FLOAT_LITERAL=77
    STRING=78
    CHAR=79
    LINE_COMMENT=80
    BLOCK_COMMENT=81
    WS=82

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(KotlinParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.StatementContext)
            else:
                return self.getTypedRuleContext(KotlinParser.StatementContext,i)


        def getRuleIndex(self):
            return KotlinParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = KotlinParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 891734717712392054) != 0) or ((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & 63) != 0):
                self.state = 60
                self.statement()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 66
            self.match(KotlinParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(KotlinParser.VarDeclContext,0)


        def valDecl(self):
            return self.getTypedRuleContext(KotlinParser.ValDeclContext,0)


        def functionDecl(self):
            return self.getTypedRuleContext(KotlinParser.FunctionDeclContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(KotlinParser.IfStatementContext,0)


        def whenStatement(self):
            return self.getTypedRuleContext(KotlinParser.WhenStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(KotlinParser.WhileStatementContext,0)


        def doWhileStatement(self):
            return self.getTypedRuleContext(KotlinParser.DoWhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(KotlinParser.ForStatementContext,0)


        def tryStatement(self):
            return self.getTypedRuleContext(KotlinParser.TryStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(KotlinParser.ReturnStatementContext,0)


        def exprStatement(self):
            return self.getTypedRuleContext(KotlinParser.ExprStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(KotlinParser.BlockContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(KotlinParser.BreakStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(KotlinParser.ContinueStatementContext,0)


        def throwStatement(self):
            return self.getTypedRuleContext(KotlinParser.ThrowStatementContext,0)


        def getRuleIndex(self):
            return KotlinParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = KotlinParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.varDecl()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.valDecl()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.functionDecl()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.ifStatement()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.whenStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.whileStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.doWhileStatement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 8)
                self.state = 75
                self.forStatement()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 9)
                self.state = 76
                self.tryStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 10)
                self.state = 77
                self.returnStatement()
                pass
            elif token in [11, 12, 24, 30, 42, 53, 54, 58, 59, 74, 75, 76, 77, 78, 79]:
                self.enterOuterAlt(localctx, 11)
                self.state = 78
                self.exprStatement()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 12)
                self.state = 79
                self.block()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 13)
                self.state = 80
                self.breakStatement()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 14)
                self.state = 81
                self.continueStatement()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 15)
                self.state = 82
                self.throwStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(KotlinParser.FUN, 0)

        def ID(self):
            return self.getToken(KotlinParser.ID, 0)

        def LPAREN(self):
            return self.getToken(KotlinParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(KotlinParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KotlinParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(KotlinParser.ParameterListContext,0)


        def COLON(self):
            return self.getToken(KotlinParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(KotlinParser.TypeContext,0)


        def getRuleIndex(self):
            return KotlinParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)




    def functionDecl(self):

        localctx = KotlinParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(KotlinParser.FUN)
            self.state = 86
            self.match(KotlinParser.ID)
            self.state = 87
            self.match(KotlinParser.LPAREN)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==75:
                self.state = 88
                self.parameterList()


            self.state = 91
            self.match(KotlinParser.RPAREN)
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==49:
                self.state = 92
                self.match(KotlinParser.COLON)
                self.state = 93
                self.type_()


            self.state = 96
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.ParameterContext)
            else:
                return self.getTypedRuleContext(KotlinParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(KotlinParser.COMMA)
            else:
                return self.getToken(KotlinParser.COMMA, i)

        def getRuleIndex(self):
            return KotlinParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = KotlinParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.parameter()
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==50:
                self.state = 99
                self.match(KotlinParser.COMMA)
                self.state = 100
                self.parameter()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(KotlinParser.ID, 0)

        def COLON(self):
            return self.getToken(KotlinParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(KotlinParser.TypeContext,0)


        def getRuleIndex(self):
            return KotlinParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)




    def parameter(self):

        localctx = KotlinParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(KotlinParser.ID)
            self.state = 107
            self.match(KotlinParser.COLON)
            self.state = 108
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(KotlinParser.INT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(KotlinParser.STRING_TYPE, 0)

        def BOOLEAN_TYPE(self):
            return self.getToken(KotlinParser.BOOLEAN_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(KotlinParser.FLOAT_TYPE, 0)

        def DOUBLE_TYPE(self):
            return self.getToken(KotlinParser.DOUBLE_TYPE, 0)

        def CHAR_TYPE(self):
            return self.getToken(KotlinParser.CHAR_TYPE, 0)

        def ARRAY_TYPE(self):
            return self.getToken(KotlinParser.ARRAY_TYPE, 0)

        def INTARRAY_TYPE(self):
            return self.getToken(KotlinParser.INTARRAY_TYPE, 0)

        def CHARARRAY_TYPE(self):
            return self.getToken(KotlinParser.CHARARRAY_TYPE, 0)

        def BOOLEANARRAY_TYPE(self):
            return self.getToken(KotlinParser.BOOLEANARRAY_TYPE, 0)

        def ID(self):
            return self.getToken(KotlinParser.ID, 0)

        def getRuleIndex(self):
            return KotlinParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type_(self):

        localctx = KotlinParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not(((((_la - 32)) & ~0x3f) == 0 and ((1 << (_la - 32)) & 8796093023231) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(KotlinParser.IF, 0)

        def LPAREN(self):
            return self.getToken(KotlinParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(KotlinParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(KotlinParser.RPAREN, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.BlockContext)
            else:
                return self.getTypedRuleContext(KotlinParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(KotlinParser.ELSE, 0)

        def getRuleIndex(self):
            return KotlinParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = KotlinParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(KotlinParser.IF)
            self.state = 113
            self.match(KotlinParser.LPAREN)
            self.state = 114
            self.expression(0)
            self.state = 115
            self.match(KotlinParser.RPAREN)
            self.state = 116
            self.block()
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 117
                self.match(KotlinParser.ELSE)
                self.state = 118
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhenStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHEN(self):
            return self.getToken(KotlinParser.WHEN, 0)

        def LPAREN(self):
            return self.getToken(KotlinParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(KotlinParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(KotlinParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(KotlinParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(KotlinParser.RBRACE, 0)

        def whenEntry(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.WhenEntryContext)
            else:
                return self.getTypedRuleContext(KotlinParser.WhenEntryContext,i)


        def getRuleIndex(self):
            return KotlinParser.RULE_whenStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhenStatement" ):
                listener.enterWhenStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhenStatement" ):
                listener.exitWhenStatement(self)




    def whenStatement(self):

        localctx = KotlinParser.WhenStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_whenStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(KotlinParser.WHEN)
            self.state = 122
            self.match(KotlinParser.LPAREN)
            self.state = 123
            self.expression(0)
            self.state = 124
            self.match(KotlinParser.RPAREN)
            self.state = 125
            self.match(KotlinParser.LBRACE)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 891717125356394504) != 0) or ((((_la - 74)) & ~0x3f) == 0 and ((1 << (_la - 74)) & 63) != 0):
                self.state = 126
                self.whenEntry()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(KotlinParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhenEntryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(KotlinParser.ExpressionContext,0)


        def ARROW(self):
            return self.getToken(KotlinParser.ARROW, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(KotlinParser.StatementContext)
            else:
                return self.getTypedRuleContext(KotlinParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(KotlinParser.ELSE, 0)

        def getRuleIndex(self):
            return KotlinParser.RULE_whenEntry

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhenEntry" ):
                listener.enterWhenEntry(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhenEntry" ):
                listener.exitWhenEntry(self)




    def whenEntry(self):

        localctx = KotlinParser.WhenEntryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whenEntry)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11, 12, 24, 30, 42, 53, 54, 58, 59, 74, 75, 76, 77, 78, 79]:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.expression(0)
                self.state = 135
                self.match(KotlinParser.ARROW)
                self.state = 137 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 136
                        self.statement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 139 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(KotlinParser.ELSE)
                self.state = 142
                self.match(KotlinParser.ARROW)
                self.state = 144 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 143
                        self.statement()

                    else:
                        raise NoViableAltException(self)
                    self.state = 146 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(KotlinParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(KotlinParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(KotlinParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(KotlinParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(KotlinParser.BlockContext,0)


        def getRuleIndex(self):
            return KotlinParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = KotlinParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(KotlinParser.WHILE)
            self.state = 151
            self.match(KotlinParser.LPAREN)
            self.state = 152
            self.expression(0)
            self.state = 153
            self.match(KotlinParser.RPAREN)
            self.state = 154
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DoWhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(KotlinParser.DO, 0)

        def block(self):
            return self.getTypedRuleContext(KotlinParser.BlockContext,0)


        def WHILE(self):
            return self.getToken(KotlinParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(KotlinParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(KotlinParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(KotlinParser.RPAREN, 0)

        def getRuleIndex(self):
            return KotlinParser.RULE_doWhileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDoWhileStatement" ):
                listener.enterDoWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDoWhileStatement" ):
                listener.exitDoWhileStatement(self)




    def doWhileStatement(self):

        localctx = KotlinParser.DoWhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_doWhileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(KotlinParser.DO)
            self.state = 157
            self.block()
            self.state = 158
            self.match(KotlinParser.WHILE)
            self.state = 159
            self.match(KotlinParser.LPAREN)
            self.state = 160
            self.expression(0)
            self.state = 161
            self.match(KotlinParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


